--- a/src/main/webapp/layout/header.xhtml
+++ b/src/main/webapp/layout/header.xhtml
@@ -4,7 +4,7 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 
 	<div class="logo">
-		<img src="resources/img/logo_yaw.png" alt="#{msg['label.logo.yaw']}"
+		<img src="resources/img/Inema-logo.png" alt="#{msg['label.logo.yaw']}"
 			title="#{msg['label.logo.yaw']}" />
 	</div>
 
