--- a/src/main/webapp/layout/header.xhtml
+++ b/src/main/webapp/layout/header.xhtml
@@ -3,13 +3,13 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 
-	<div class="logo">
-		<img src="resources/img/Inema-logo.png" alt="#{msg['label.logo.yaw']}"
-			title="#{msg['label.logo.yaw']}" />
-	</div>
+	
 
-	<h1 class="title">
-		<h:outputText value="#{msg['app.title']}" />
-	</h1>
+	
 
+				<img src="resources/img/Inema-logo.png" alt="#{msg['label.logo.inema']}"
+					title="#{msg['label.logo.inema']}" style="padding-left:40px"/>
+			<h1 class="title" style="text-align:center">
+				<h:outputText value="#{msg['app.title']}" />
+			</h1>
 </ui:fragment>
