--- a/src/main/webapp/resources/css/prime.css
+++ b/src/main/webapp/resources/css/prime.css
@@ -5,8 +5,8 @@
 
 .logo {
 	float: left;
-	width: 50px;
-	height: 30px;
+	width: 120px;
+	height: 40px;
 	padding-right: 10px;
 }
 
@@ -17,5 +17,5 @@
 	margin: 0;
 	padding: 0;
 	padding-top: 20px;
-	color: #D16727;
+	color: #191970;
 }
