--- a/src/main/webapp/layout/header.xhtml
+++ b/src/main/webapp/layout/header.xhtml
@@ -5,11 +5,9 @@
 
 	
 
-	
-
-<!-- 				<img src="resources/img/Inema-logo.png" alt="#{msg['label.logo.inema']}" -->
-<!-- 					title="#{msg['label.logo.inema']}" style="padding-left:40px"/> -->
-<!-- 			<h1 class="title" style="text-align:center"> -->
-<!-- 				<h:outputText value="#{msg['app.title']}" /> -->
-<!-- 			</h1> -->
+				<img src="resources/img/Inema-logo.png" alt="#{msg['label.logo.inema']}"
+					title="#{msg['label.logo.inema']}" style="padding-left:40px"/>
+			<h1 class="title" style="text-align:center">
+				<h:outputText value="#{msg['app.title']}" />
+			</h1>
 </ui:fragment>
