--- a/src/main/webapp/layout/footer.xhtml
+++ b/src/main/webapp/layout/footer.xhtml
@@ -3,13 +3,6 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
 
-<!-- 	<div style="border-top: 1px solid #E5E5E5; padding-top: 10px"> -->
-<!-- 		<a href="http://www.yaw.com.br" title="#{msg['label.yaw']}" -->
-<!-- 			target="open"><h:outputText value="#{msg['label.yaw']}" /></a> | <small><h:outputText -->
-<!-- 				value="#{msg['label.detalhes.projeto']}" escape="false"/> (<a -->
-<!-- 			href="http://www.yaw.com.br/open/projetos/jsf2-gae/" -->
-<!-- 			title="#{msg['label.saiba.mais']}" target="open"><h:outputText -->
-<!-- 					value="#{msg['label.saiba.mais']}" /></a>) </small> -->
-<!-- 	</div> -->
+<!-- fazer um footer talvez poteriormente -->
 
 </ui:fragment>
